--- a/ExViewer/Controls/ImagePresenter.xaml
+++ b/ExViewer/Controls/ImagePresenter.xaml
@@ -35,8 +35,7 @@
       <Image x:Name="img_Thumb"
              Source="{x:Bind Image.Thumb, Mode=OneWay}" />
       <Image x:Name="img_Content"
-             xmlns:s="using:Windows.Storage.Streams"
-             Source="{x:Bind xb:Image.OfRandomAccessStreamReference(Image.ImageFile), Mode=OneWay}"
+             Source="{x:Bind xb:Image.OfStorageFile(Image.ImageFile), Mode=OneWay, FallbackValue={x:Null}}"
              Visibility="{x:Bind Image.ImageFile, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}, FallbackValue=Collapsed}" />
     </Grid>
   </ScrollViewer>
