--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -1,22 +1,22 @@
 ﻿<views:MvvmPage x:Class="ExViewer.Views.ImagePage"
-                 xmlns:views="using:Opportunity.MvvmUniverse.Views"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
-                 xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:controls="using:ExViewer.Controls"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:local="using:ExViewer.Views"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:client="using:ExClient"
-                 xmlns:g="using:ExClient.Galleries"
-                 x:Name="page"
-                 xmlns:xb="using:Opportunity.Converters.XBind"
-                 Loading="page_Loading"
-                 Loaded="page_Loaded"
-                 Unloaded="page_Unloaded"
-                 NavigationCacheMode="Enabled"
-                 mc:Ignorable="d">
+                xmlns:views="using:Opportunity.MvvmUniverse.Views"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+                xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:controls="using:ExViewer.Controls"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:local="using:ExViewer.Views"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:client="using:ExClient"
+                xmlns:g="using:ExClient.Galleries"
+                x:Name="page"
+                xmlns:xb="using:Opportunity.Converters.XBind"
+                Loading="page_Loading"
+                Loaded="page_Loaded"
+                Unloaded="page_Unloaded"
+                NavigationCacheMode="Enabled"
+                mc:Ignorable="d">
   <Page.Transitions>
     <TransitionCollection>
       <NavigationThemeTransition>
@@ -267,7 +267,7 @@
       </FlipView.ItemContainerStyle>
     </FlipView>
     <Border x:Name="bdTop"
-            Padding="{x:Bind VisibleBounds, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
             Visibility="{x:Bind cb_top.Visibility, Mode=OneWay}"
             Background="{x:Bind cb_top.Background, Mode=OneWay}"
             RelativePanel.AlignTopWithPanel="True"
@@ -278,9 +278,9 @@
       </Border.RenderTransform>
     </Border>
     <Border x:Name="bdLeft"
-            Padding="{x:Bind VisibleBounds, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0,x0,x0'}"
+            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0,x0,x0'), Mode=OneWay}"
+            Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x1,x0,x0'), Mode=OneWay}"
             Height="48"
-            Margin="{x:Bind VisibleBounds, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x1,x0,x0'}"
             Visibility="{x:Bind cb_top.Visibility, Mode=OneWay}"
             Background="{x:Bind cb_top.Background, Mode=OneWay}"
             RelativePanel.AlignTopWithPanel="True"
@@ -290,9 +290,9 @@
       </Border.RenderTransform>
     </Border>
     <Border x:Name="bdRight"
-            Padding="{x:Bind VisibleBounds, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x1,x0'}"
+            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x1,x0'), Mode=OneWay}"
+            Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x1,x0,x0'), Mode=OneWay}"
             Height="48"
-            Margin="{x:Bind VisibleBounds, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x1,x0,x0'}"
             Visibility="{x:Bind cb_top.Visibility, Mode=OneWay}"
             Background="{x:Bind cb_top.Background, Mode=OneWay}"
             RelativePanel.AlignTopWithPanel="True"
@@ -304,7 +304,7 @@
     <CommandBar x:Name="cb_top"
                 xmlns:ani="using:Microsoft.Toolkit.Uwp.UI.Animations"
                 KeyDown="cb_top_KeyDown"
-                Margin="{x:Bind VisibleBounds, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+                Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
                 HorizontalContentAlignment="Stretch"
                 IsDynamicOverflowEnabled="False"
                 Closing="cb_top_Closing"
