--- a/ExViewer/Views/SavedPage.xaml
+++ b/ExViewer/Views/SavedPage.xaml
@@ -1,14 +1,14 @@
-﻿<controls:MyPage x:Class="ExViewer.Views.SavedPage"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:local="using:ExViewer.Views"
-                 xmlns:controls="using:ExViewer.Controls"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 NavigationCacheMode="Enabled"
-                 x:Name="page"
-                 mc:Ignorable="d"
-                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls">
+﻿<views:MvvmPage x:Class="ExViewer.Views.SavedPage"
+                xmlns:views="using:Opportunity.MvvmUniverse.Views"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                NavigationCacheMode="Enabled"
+                x:Name="page"
+                mc:Ignorable="d">
   <Page.Resources>
     <MenuFlyout x:Name="mf_Gallery"
                 Placement="Bottom">
@@ -16,7 +16,7 @@
                       x:Name="mfi_DeleteGallery"
                       Icon="Delete"
                       Text="Delete"
-                      Command="{x:Bind VM.Delete, Mode=OneWay}" />
+                      Command="{x:Bind ViewModel.Delete, Mode=OneWay}" />
     </MenuFlyout>
   </Page.Resources>
   <Page.Transitions>
@@ -29,14 +29,14 @@
 
   <RelativePanel>
     <tk:PullToRefreshListView x:Name="lv"
-                              RefreshCommand="{x:Bind VM.Refresh}"
+                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
+                              Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                              RefreshCommand="{x:Bind ViewModel.Refresh}"
                               RelativePanel.AlignBottomWithPanel="True"
                               RelativePanel.AlignLeftWithPanel="True"
                               RelativePanel.AlignRightWithPanel="True"
                               RelativePanel.Below="cb_top"
-                              Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
-                              Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
-                              ItemsSource="{x:Bind VM.Galleries, Mode=OneWay}"
+                              ItemsSource="{x:Bind ViewModel.Galleries, Mode=OneWay}"
                               Style="{StaticResource GalleryListViewStyle}"
                               ItemClick="lv_ItemClick"
                               ContextCanceled="lv_ContextCanceled"
@@ -57,7 +57,7 @@
                    HorizontalAlignment="Center"
                    Margin="12"
                    Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind VM.Galleries, FallbackValue=Visible, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}"
+                   Visibility="{x:Bind ViewModel.Galleries, FallbackValue=Visible, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}"
                    Text="Loading more galleries..." />
       </ListView.Footer>
       <ListView.Header>
@@ -65,23 +65,23 @@
                    HorizontalAlignment="Center"
                    Margin="12"
                    Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind VM.Galleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
+                   Visibility="{x:Bind ViewModel.Galleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
                    Text="No saved galleries" />
       </ListView.Header>
     </tk:PullToRefreshListView>
-    <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
-            Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+    <Border Style="{ThemeResource TopBarPlaceholderBorderStyle}"
+            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,48,x1,x0'), Mode=OneWay}"
             RelativePanel.AlignLeftWithPanel="True"
             RelativePanel.AlignRightWithPanel="True" />
     <CommandBar x:Name="cb_top"
-                Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+                Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
                 RelativePanel.AlignLeftWithPanel="True"
                 RelativePanel.AlignRightWithPanel="True"
                 HorizontalContentAlignment="Stretch">
       <CommandBar.PrimaryCommands>
         <AppBarButton x:Uid="Views/SavedPage/RefreshAppBarButton"
                       x:Name="abb_Refresh"
-                      Command="{x:Bind VM.Refresh}"
+                      Command="{x:Bind ViewModel.Refresh}"
                       ToolTipService.ToolTip="{x:Bind abb_Refresh.Label}"
                       Icon="Refresh"
                       Label="Refresh" />
@@ -95,4 +95,4 @@
       </CommandBar.SecondaryCommands>
     </CommandBar>
   </RelativePanel>
-</controls:MyPage>
+</views:MvvmPage>
