--- a/ExViewer/Views/SettingsPage.xaml
+++ b/ExViewer/Views/SettingsPage.xaml
@@ -1,83 +1,85 @@
-﻿<controls:MyPage xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:local="using:ExViewer.Views"
-                 xmlns:controls="using:ExViewer.Controls"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:ExClient="using:ExClient"
-                 xmlns:settings="using:ApplicationDataManager.Settings"
-                 x:Class="ExViewer.Views.SettingsPage"
-                 x:Name="page"
-                 Loading="page_Loading"
-                 Unloaded="page_Unloaded"
-                 NavigationCacheMode="Enabled"
-                 mc:Ignorable="d">
-    <controls:MyPage.Resources>
-        <settings:SettingTemplateSelector x:Key="SettingTemplateSelector">
-            <settings:SettingTemplateSelector.CustomTemplateDictionary>
-                <ResourceDictionary Source="ms-appx:///Settings/SettingPresenterTemplates.xaml" />
-            </settings:SettingTemplateSelector.CustomTemplateDictionary>
-        </settings:SettingTemplateSelector>
-    </controls:MyPage.Resources>
-    <controls:MyPage.Transitions>
-        <TransitionCollection>
-            <NavigationThemeTransition>
-                <SlideNavigationTransitionInfo />
-            </NavigationThemeTransition>
-        </TransitionCollection>
-    </controls:MyPage.Transitions>
-    <Pivot x:Name="pv_root"
-           BorderThickness="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
-           BorderBrush="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
-        <Pivot.LeftHeader>
-            <Border x:Name="bdSplitViewPlaceholder"
-                    Height="48"
-                    Width="0" />
-        </Pivot.LeftHeader>
-        <Pivot.HeaderTemplate>
-            <DataTemplate x:DataType="settings:GroupedSettings">
-                <TextBlock Text="{x:Bind GroupName}" />
-            </DataTemplate>
-        </Pivot.HeaderTemplate>
-        <Pivot.ItemTemplate>
-            <DataTemplate x:DataType="settings:GroupedSettings">
-                <ListView ItemTemplateSelector="{StaticResource SettingTemplateSelector}"
-                          ItemsSource="{x:Bind}"
-                          Padding="{Binding VisibleBoundsThickness, ElementName=page, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
-                          Margin="{Binding VisibleBoundsThickness, ElementName=page, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}">
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="ListViewItem">
-                                        <ContentPresenter HorizontalAlignment="Stretch"
-                                                          Padding="{TemplateBinding Padding}"
-                                                          Foreground="{TemplateBinding Foreground}"
-                                                          Background="{TemplateBinding Background}"
-                                                          BorderBrush="{TemplateBinding BorderBrush}"
-                                                          Control.IsTemplateFocusTarget="True" />
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter Property="MinHeight"
-                                    Value="0" />
-                            <Setter Property="Margin"
-                                    Value="0" />
-                            <Setter Property="Padding"
-                                    Value="12,8" />
-                            <Setter Property="UseSystemFocusVisuals"
-                                    Value="True" />
-                            <Setter Property="IsFocusEngagementEnabled"
-                                    Value="True" />
-                            <Setter Property="FocusVisualMargin"
-                                    Value="8,4" />
-                        </Style>
-                    </ListView.ItemContainerStyle>
-                    <ListView.ItemContainerTransitions>
-                        <TransitionCollection />
-                    </ListView.ItemContainerTransitions>
-                </ListView>
-            </DataTemplate>
-        </Pivot.ItemTemplate>
-    </Pivot>
-</controls:MyPage>
+﻿<views:MvvmPage xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:views="using:Opportunity.MvvmUniverse.Views"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns:local="using:ExViewer.Views"
+                xmlns:controls="using:ExViewer.Controls"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:ExClient="using:ExClient"
+                xmlns:settings="using:ApplicationDataManager.Settings"
+                x:Class="ExViewer.Views.SettingsPage"
+                x:Name="page"
+                Loading="page_Loading"
+                Unloaded="page_Unloaded"
+                NavigationCacheMode="Enabled"
+                mc:Ignorable="d">
+  <Page.Resources>
+    <settings:SettingTemplateSelector x:Key="SettingTemplateSelector">
+      <settings:SettingTemplateSelector.CustomTemplateDictionary>
+        <ResourceDictionary Source="ms-appx:///Settings/SettingPresenterTemplates.xaml" />
+      </settings:SettingTemplateSelector.CustomTemplateDictionary>
+    </settings:SettingTemplateSelector>
+  </Page.Resources>
+  <Page.Transitions>
+    <TransitionCollection>
+      <NavigationThemeTransition>
+        <SlideNavigationTransitionInfo />
+      </NavigationThemeTransition>
+    </TransitionCollection>
+  </Page.Transitions>
+  <Pivot x:Name="pv_root"
+         BorderThickness="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
+         BorderBrush="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+    <Pivot.LeftHeader>
+      <Border x:Name="bdSplitViewPlaceholder"
+              Height="48"
+              Width="0" />
+    </Pivot.LeftHeader>
+    <Pivot.HeaderTemplate>
+      <DataTemplate x:DataType="settings:GroupedSettings">
+        <TextBlock Text="{x:Bind GroupName}" />
+      </DataTemplate>
+    </Pivot.HeaderTemplate>
+    <Pivot.ItemTemplate>
+      <DataTemplate x:DataType="settings:GroupedSettings">
+        <ListView ItemTemplateSelector="{StaticResource SettingTemplateSelector}"
+                  ItemsSource="{x:Bind}"
+                  Padding="{Binding VisibleBounds, ElementName=page, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
+                  Margin="{Binding VisibleBounds, ElementName=page, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}">
+          <ListView.ItemContainerStyle>
+            <Style TargetType="ListViewItem">
+              <Setter Property="Template">
+                <Setter.Value>
+                  <ControlTemplate TargetType="ListViewItem">
+                    <ContentPresenter HorizontalAlignment="Stretch"
+                                      Padding="{TemplateBinding Padding}"
+                                      Foreground="{TemplateBinding Foreground}"
+                                      Background="{TemplateBinding Background}"
+                                      BorderBrush="{TemplateBinding BorderBrush}"
+                                      Control.IsTemplateFocusTarget="True" />
+                  </ControlTemplate>
+                </Setter.Value>
+              </Setter>
+              <Setter Property="MinHeight"
+                      Value="0" />
+              <Setter Property="Margin"
+                      Value="0" />
+              <Setter Property="Padding"
+                      Value="12,8" />
+              <Setter Property="UseSystemFocusVisuals"
+                      Value="True" />
+              <Setter Property="IsFocusEngagementEnabled"
+                      Value="True" />
+              <Setter Property="FocusVisualMargin"
+                      Value="8,4" />
+            </Style>
+          </ListView.ItemContainerStyle>
+          <ListView.ItemContainerTransitions>
+            <TransitionCollection />
+          </ListView.ItemContainerTransitions>
+        </ListView>
+      </DataTemplate>
+    </Pivot.ItemTemplate>
+  </Pivot>
+</views:MvvmPage>
