--- a/ExViewer/Views/FavoritesPage.xaml
+++ b/ExViewer/Views/FavoritesPage.xaml
@@ -1,42 +1,38 @@
-﻿<controls:MyPage x:Class="ExViewer.Views.FavoritesPage"
-                 x:Name="root"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:local="using:ExViewer.Views"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
-                 xmlns:vm="using:ExViewer.ViewModels"
-                 xmlns:db="using:ExViewer.Database"
-                 xmlns:con="using:Opportunity.Converters"
-                 xmlns:tcon="using:Opportunity.Converters.Typed"
-                 Loading="root_Loading"
-                 Unloaded="root_Unloaded"
-                 mc:Ignorable="d"
-                 xmlns:controls="using:ExViewer.Controls"
-                 xmlns:client="using:ExClient"
-                 NavigationCacheMode="Enabled">
-  <controls:MyPage.Transitions>
+﻿<views:MvvmPage x:Class="ExViewer.Views.FavoritesPage"
+                xmlns:views="using:Opportunity.MvvmUniverse.Views"
+                x:Name="root"
+                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:local="using:ExViewer.Views"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
+                xmlns:vm="using:ExViewer.ViewModels"
+                xmlns:db="using:ExViewer.Database"
+                xmlns:con="using:Opportunity.Converters"
+                xmlns:tcon="using:Opportunity.Converters.Typed"
+                Loading="root_Loading"
+                Unloaded="root_Unloaded"
+                mc:Ignorable="d"
+                xmlns:controls="using:ExViewer.Controls"
+                xmlns:client="using:ExClient"
+                NavigationCacheMode="Enabled">
+  <Page.Transitions>
     <TransitionCollection>
       <NavigationThemeTransition>
         <DrillInNavigationTransitionInfo />
       </NavigationThemeTransition>
     </TransitionCollection>
-  </controls:MyPage.Transitions>
-  <controls:MyPage.Resources>
+  </Page.Transitions>
+  <Page.Resources>
     <DataTemplate x:Key="FavoriteCategoryDataTemplate"
                   x:DataType="client:FavoriteCategory">
       <controls:FavoriteCategoryPresenter Category="{x:Bind}"
                                           IsLabelVisible="True" />
     </DataTemplate>
-    <tcon:ObjectToBooleanConverter x:Key="SelectionConverter"
-                                   IfNeither="true">
-      <tcon:ObjectToBooleanConverter.ValuesForFalse>
-        <x:Int32>-1</x:Int32>
-      </tcon:ObjectToBooleanConverter.ValuesForFalse>
-    </tcon:ObjectToBooleanConverter>
-  </controls:MyPage.Resources>
-  <Grid>
+  </Page.Resources>
+  <Grid >
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto" />
       <RowDefinition />
@@ -44,9 +40,9 @@
     <tk:PullToRefreshListView x:Name="lv"
                               Grid.Row="1"
                               RefreshRequested="lv_RefreshRequested"
-                              Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
-                              Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
-                              ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
+                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
+                              Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                              ItemsSource="{x:Bind ViewModel.SearchResult, Mode=OneWay}"
                               ContinuumNavigationTransitionInfo.ExitElementContainer="True"
                               Style="{StaticResource GalleryListViewStyle}"
                               ItemClick="lv_ItemClick"
@@ -68,7 +64,7 @@
                    HorizontalAlignment="Center"
                    Margin="12"
                    Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind client:SearchResultExtension.IsEmptyVisible(VM.SearchResult.Count, VM.SearchResult.HasMoreItems), FallbackValue=Collapsed, Mode=OneWay}"
+                   Visibility="{x:Bind client:SearchResultExtension.IsEmptyVisible(ViewModel.SearchResult.Count, ViewModel.SearchResult.HasMoreItems), FallbackValue=Collapsed, Mode=OneWay}"
                    Text="No hits found" />
       </ListView.Header>
       <ListView.Footer>
@@ -76,13 +72,13 @@
                    HorizontalAlignment="Center"
                    Margin="12"
                    Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind VM.SearchResult.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                   Visibility="{x:Bind xb:Visibility.OfBoolean(ViewModel.SearchResult.HasMoreItems), Mode=OneWay, FallbackValue=Visible}"
                    Text="Loading more galleries..." />
       </ListView.Footer>
     </tk:PullToRefreshListView>
     <Grid x:Name="gdTopRoot"
           Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
-          Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}">
+          Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}">
       <Grid.ColumnDefinitions>
         <ColumnDefinition x:Name="cdSplitViewPlaceholder"
                           Width="0" />
@@ -93,7 +89,7 @@
                 Grid.Column="1"
                 Margin="8,8,0,8"
                 Style="{StaticResource NoDropDownGlyphComboBoxStyle}"
-                SelectedItem="{x:Bind VM.Category, Mode=TwoWay}"
+                SelectedItem="{x:Bind ViewModel.Category, Mode=TwoWay}"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
                 ItemTemplate="{StaticResource FavoriteCategoryDataTemplate}" />
@@ -103,11 +99,11 @@
                       Style="{StaticResource SearchAutoSuggestBoxStyle}"
                       Grid.Column="2"
                       Margin="8"
-                      Text="{x:Bind VM.Keyword, Mode=TwoWay}"
+                      Text="{x:Bind ViewModel.Keyword, Mode=TwoWay}"
                       PlaceholderText="Search..."
                       controls:TagSuggestionService.IsEnabled="True"
                       controls:TagSuggestionService.InputScope="Search"
-                      controls:TagSuggestionService.SubmitCommand="{x:Bind VM.Search, Mode=OneWay}"
+                      controls:TagSuggestionService.SubmitCommand="{x:Bind ViewModel.Search, Mode=OneWay}"
                       VerticalAlignment="Stretch" />
       <CommandBar x:Name="cbActions"
                   x:DeferLoadStrategy="Lazy"
@@ -140,7 +136,7 @@
                         Icon="Send"
                         Label="Apply"
                         ToolTipService.ToolTip="{x:Bind abbApply.Label}"
-                        IsEnabled="{x:Bind lv.SelectedIndex, Converter={StaticResource SelectionConverter}, Mode=OneWay}"
+                        IsEnabled="{x:Bind xb:Int32.AreNotEqual(lv.SelectedIndex, -1), Mode=OneWay}"
                         Click="abbApply_Click" />
         </CommandBar.PrimaryCommands>
         <CommandBar.SecondaryCommands>
@@ -156,4 +152,4 @@
       </CommandBar>
     </Grid>
   </Grid>
-</controls:MyPage>
+</views:MvvmPage>
