--- a/ExViewer/Themes/GenericOverride.xaml
+++ b/ExViewer/Themes/GenericOverride.xaml
@@ -367,4 +367,6 @@
       </Setter.Value>
     </Setter>
   </Style>
+
+  <x:Double x:Key="ContentDialogMaxWidth">748</x:Double>
 </ResourceDictionary>
