--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -11,8 +11,8 @@
                           PrimaryButtonText="Reset"
                           PrimaryButtonClick="MyContentDialog_PrimaryButtonClick"
                           CloseButtonText="?"
+                          CloseButtonClick="MyContentDialog_CloseButtonClick"
                           Opened="ContentDialog_Opened"
-                          Closing="ContentDialog_Closing"
                           FullSizeDesired="True">
   <ContentDialog.Title>
     <Grid>
@@ -30,7 +30,7 @@
   </ContentDialog.Title>
   <Grid x:Name="gdContentRoot">
     <WebView x:Name="wv"
-             LoadCompleted="wv_LoadCompleted"
+             DOMContentLoaded="wv_DOMContentLoaded"
              NavigationFailed="wv_NavigationFailed"
              ScriptNotify="wv_ScriptNotify" />
   </Grid>
