use mvvmpage every where; fix fucus bug of GalleyPage
Former-commit-id: d835c2fc45bdef07023051626114895b2310cadf [formerly e7e423101b1bd8c52f3766f5d3c021201e9b5dca]
Former-commit-id: bff89b867a3a0e45b3844a9109d88e6c068092a1

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -23,14 +23,14 @@
                 Unloaded="page_Unloaded"
                 NavigationCacheMode="Enabled"
                 mc:Ignorable="d">
-  <views:MvvmPage.Transitions>
+  <Page.Transitions>
     <TransitionCollection>
       <NavigationThemeTransition>
         <ContinuumNavigationTransitionInfo />
       </NavigationThemeTransition>
     </TransitionCollection>
-  </views:MvvmPage.Transitions>
-  <views:MvvmPage.Resources>
+  </Page.Transitions>
+  <Page.Resources>
     <con:ChainConverter x:Key="ConAddComment">
       <tcon:ObjectToBooleanConverter IfNeither="False">
         <tcon:ObjectToBooleanConverter.ValuesForTrue>
@@ -227,7 +227,7 @@
       <Setter Property="VerticalAlignment"
               Value="Top" />
     </Style>
-  </views:MvvmPage.Resources>
+  </Page.Resources>
   <Grid x:Name="gd_Root">
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto" />
