--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -6,6 +6,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:tagging="using:ExClient.Tagging"
              mc:Ignorable="d"
+             IsTabStop="False"
              xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
              d:DesignHeight="200"
              d:DesignWidth="700">
